--- a/PerkyRabbit_Restful_Client/Views/Shared/_Layout.cshtml
+++ b/PerkyRabbit_Restful_Client/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                      <a class="nav-link text-dark" asp-area="" asp-controller="InstituteBranch" asp-action="Index">InstituteBranch</a>
                         </li>
                   <li class="nav-item">
-                     <a class="nav-link text-dark" asp-area="" asp-controller="Employeee" asp-action="Index">Employeee</a>
+                     <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employeee</a>
                   </li>
                     </ul>
                 </div>
