--- a/PerkyRabbit_Restful_Client/Views/Shared/_Layout.cshtml
+++ b/PerkyRabbit_Restful_Client/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                      <a class="nav-link text-dark" asp-area="" asp-controller="Institute" asp-action="Index">Institute</a>
                         </li>
                         <li class="nav-item">
-                     <a class="nav-link text-dark" asp-area="" asp-controller="InstituteBranch" asp-action="Index">InstituteBranch</a>
+                     <a class="nav-link text-dark" asp-area="" asp-controller="InstituteBranch" asp-action="Index">Institute Branch</a>
                         </li>
                   <li class="nav-item">
-                     <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employeee</a>
+                     <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
                   </li>
                     </ul>
                 </div>
