--- a/PerkyRabbit_Restful_Client/Views/Institute/Index.cshtml
+++ b/PerkyRabbit_Restful_Client/Views/Institute/Index.cshtml
@@ -92,8 +92,8 @@
             </div>
             <div class="modal-footer">
                <button type="button" class="btn btn-secondary" onclick="Close()" id="btnClose" data-dismiss="modal">Close</button>
-               <button type="button" class="btn btn-primary" onclick="Save()" id="btnSave">Save changes</button>
-               <button type="button" class="btn btn-primary" onclick="Update()" id="btnUpdate">Update changes</button>
+               <button type="button" class="btn btn-primary" onclick="Save()" id="btnSave">Save</button>
+               <button type="button" class="btn btn-primary" onclick="Update()" id="btnUpdate">Update</button>
             </div>
          </div>
       </div>
